--- a/notebooks/DATA420-25S1 Assignment 1.ipynb
+++ b/notebooks/DATA420-25S1 Assignment 1.ipynb
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "6c17a55d-1556-4079-88c8-cb56f5dadebf",
    "metadata": {},
    "outputs": [
@@ -579,59 +579,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "5926e311-de42-46e2-a907-a082659f11f1",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pyspark.sql.dataframe.DataFrame'>\n",
-      "root\n",
-      " |-- _c0: string (nullable = true)\n",
-      " |-- _c1: string (nullable = true)\n",
-      " |-- _c2: string (nullable = true)\n",
-      " |-- _c3: string (nullable = true)\n",
-      " |-- _c4: string (nullable = true)\n",
-      " |-- _c5: string (nullable = true)\n",
-      " |-- _c6: string (nullable = true)\n",
-      " |-- _c7: string (nullable = true)\n",
-      "\n",
-      "DataFrame[_c0: string, _c1: string, _c2: string, _c3: string, _c4: string, _c5: string, _c6: string, _c7: string]\n",
-      "+-----------+--------+----+---+----+----+---+----+\n",
-      "|_c0        |_c1     |_c2 |_c3|_c4 |_c5 |_c6|_c7 |\n",
-      "+-----------+--------+----+---+----+----+---+----+\n",
-      "|ASN00037106|20250101|PRCP|0  |NULL|NULL|a  |NULL|\n",
-      "|ASN00037115|20250101|PRCP|0  |NULL|NULL|a  |NULL|\n",
-      "|ASN00037118|20250101|PRCP|0  |NULL|NULL|a  |NULL|\n",
-      "|ASN00037120|20250101|PRCP|0  |NULL|NULL|a  |NULL|\n",
-      "|ASN00038010|20250101|PRCP|0  |NULL|NULL|a  |NULL|\n",
-      "|ASN00038026|20250101|TMAX|419|NULL|NULL|a  |NULL|\n",
-      "|ASN00038026|20250101|TMIN|226|NULL|NULL|a  |NULL|\n",
-      "|ASN00038026|20250101|PRCP|0  |NULL|NULL|a  |NULL|\n",
-      "|ASN00038026|20250101|TAVG|346|H   |NULL|S  |NULL|\n",
-      "|ASN00004028|20250101|DAPR|2  |NULL|NULL|a  |NULL|\n",
-      "|ASN00004028|20250101|DATN|2  |NULL|NULL|a  |NULL|\n",
-      "|ASN00004028|20250101|MDPR|250|NULL|NULL|a  |NULL|\n",
-      "|ASN00004028|20250101|MDTN|228|NULL|NULL|a  |NULL|\n",
-      "|ASN00004032|20250101|TMAX|352|NULL|NULL|a  |NULL|\n",
-      "|ASN00004032|20250101|TMIN|227|NULL|NULL|a  |NULL|\n",
-      "|ASN00004032|20250101|TAVG|308|H   |NULL|S  |NULL|\n",
-      "|ASN00004038|20250101|PRCP|0  |NULL|NULL|a  |NULL|\n",
-      "|ASN00004039|20250101|PRCP|240|NULL|NULL|a  |NULL|\n",
-      "|ASN00044038|20250101|PRCP|0  |NULL|NULL|a  |NULL|\n",
-      "|ASN00044045|20250101|PRCP|0  |NULL|NULL|a  |NULL|\n",
-      "+-----------+--------+----+---+----+----+---+----+\n",
-      "only showing top 20 rows\n",
-      "\n"
+     "ename": "NameError",
+     "evalue": "name 'spark' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Load a subset of the last year in daily into Spark from Azure Blob Storage using spark.read.csv\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m daily \u001b[38;5;241m=\u001b[39m \u001b[43mspark\u001b[49m\u001b[38;5;241m.\u001b[39mread\u001b[38;5;241m.\u001b[39mcsv(daily_path)\u001b[38;5;241m.\u001b[39mlimit(\u001b[38;5;241m1000\u001b[39m)\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mtype\u001b[39m(daily))\n\u001b[1;32m      6\u001b[0m daily\u001b[38;5;241m.\u001b[39mprintSchema()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'spark' is not defined"
      ]
     }
    ],
