Getting latex to perform

--- a/notes/20250328A report.tex
+++ b/notes/20250328A report.tex
@@ -146,10 +146,7 @@ In this paragraph you should give a brief overview of what you have achieved and
 
 
 
-
-
-\bibliographystyle{apa} % bibliography style
-\bibliography{ghcnd}
+\printbibliography
 
 \newpage
 
