--- a/notes/ghcnd.bib
+++ b/notes/ghcnd.bib
@@ -1,3 +1,14 @@
+
+@article{ewing2025,
+  author    = {Test Author},
+  title     = {Spark-Based GHCN Analysis},
+  journal   = {Climatology Letters},
+  year      = {2025},
+  volume    = {42},
+  number    = {1},
+  pages     = {1--10}
+}
+
 @misc{ncei2024ghcnd,
   author       = {{National Centers for Environmental Information}},
   title        = {Global historical climatology network daily (GHCN-D)},
