--- a/notebooks/_DATA420-25S1 Assignment 1.ipynb
+++ b/notebooks/_DATA420-25S1 Assignment 1.ipynb
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "5f631901-c8d1-4458-97c0-fc6f4bed1fa8",
    "metadata": {},
    "outputs": [
@@ -288,6 +288,17 @@
       "operable program or batch file.\n",
       "'HADOOP_ROOT_LOGGER' is not recognized as an internal or external command,\n",
       "operable program or batch file.\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
