--- a/notes/ghcnd.bib
+++ b/notes/ghcnd.bib
@@ -1,5 +1,5 @@
 
-@article{ewing2025,
+@article{testentry,
   author    = {Test Author},
   title     = {Spark-Based GHCN Analysis},
   journal   = {Climatology Letters},
@@ -8,8 +8,8 @@
   number    = {1},
   pages     = {1--10}
 }
-
-@misc{ncei2024ghcnd,
+ 
+@misc{ncei2024,
   author       = {{National Centers for Environmental Information}},
   title        = {Global historical climatology network daily (GHCN-D)},
   year         = {2024},
