--- a/notebooks/DATA 1.ipynb
+++ b/notebooks/DATA 1.ipynb
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "82aa580c-9e8d-4385-8c68-3084a886e64d",
    "metadata": {},
    "outputs": [
@@ -426,7 +426,7 @@
     "dailydf = spark.read.csv(remote2025csv).limit(1000)\n",
     "\n",
     "#print(type(daily))\n",
-    "print(\"print(type(weekly))\")\n",
+    "print(\"print(type(dailydf))\")\n",
     "print(type(dailydf))\n",
     "\n",
     "#daily.printSchema()\n",
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "731e5a3f-67e4-4ef9-a704-f4ed240302e8",
    "metadata": {},
    "outputs": [
@@ -461,14 +461,14 @@
     "\n",
     "stations_relative_path = f'ghcnd/ghcnd-stations.txt'\n",
     "stations_path = f'wasbs://{azure_data_container_name}@{azure_account_name}.blob.core.windows.net/{stations_relative_path}'\n",
-    "print(stations_path)\n",
     "remotestation = f'{remotepath}{stations_relative_path}'\n",
+    "print(stations_path)\n",
     "print(f'remotestation: {remotestation}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "a2b835f6-3780-4e52-a313-1b517b88c18a",
    "metadata": {},
    "outputs": [
@@ -513,16 +513,21 @@
    "source": [
     "# Load the stations metadata into Spark from Azure Blob Storage using spark.read.text without any other processing\n",
     "\n",
-    "stations = spark.read.text(stations_path).limit(1000)\n",
+    "stations = spark.read.text(remotestation).limit(1000)\n",
+    "print(\"print(type(stations))\")\n",
     "print(type(stations))\n",
+    "print(\"stations.printSchema()\")\n",
     "stations.printSchema()\n",
+    "\n",
+    "print(\"print(stations)\")\n",
     "print(stations)\n",
+    "print(\"stations.show(20, False)\")\n",
     "stations.show(20, False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "d15503e4-3b5b-496d-84fe-c87786c32e75",
    "metadata": {},
    "outputs": [
@@ -582,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "feed52b3-dcb6-492c-a589-f3a461f8dcf6",
    "metadata": {},
    "outputs": [
@@ -600,14 +605,15 @@
     "\n",
     "output_relative_path = f'{username}/stations'\n",
     "output_path = f'wasbs://{azure_user_container_name}@{azure_account_name}.blob.core.windows.net/{output_relative_path}'\n",
-    "remotestations = f'{remotepath}{output_relative_path}'\n",
-    "print(output_path)\n",
-    "print(f'remotestations: {remotestations}')"
+    "print(f'output_path: {output_path}')\n",
+    "#-------------------------------------------------------------\n",
+    "remotestationsp = f'{remotepath}{output_relative_path}'\n",
+    "print(f'remotestationsp: {remotestationsp}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "b24beb8d-4488-4657-b0af-15f2468f92f0",
    "metadata": {},
    "outputs": [
@@ -623,12 +629,14 @@
    "source": [
     "# Save the stations metadata to Azure Blob Storage from Spark\n",
     "\n",
-    "stations.write.mode(\"overwrite\").text(output_path)"
+    "stations.write.mode(\"overwrite\").text(output_path)\n",
+    "stations.write.mode(\"overwrite\").text(remotestationsp)\n",
+    "stationdf2 = spark.read.text(remotestation).limit(1000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "93c062b7-db91-4e7f-8435-b205ea54708b",
    "metadata": {},
    "outputs": [
@@ -651,8 +659,12 @@
    ],
    "source": [
     "# Use the hdfs command to explore the data in Azure Blob Storage\n",
-    "\n",
-    "!hdfs dfs -ls wasbs://{azure_user_container_name}@{azure_account_name}.blob.core.windows.net/{username}/stations/"
+    "print(f'!hdfs dfs -ls wasbs:')\n",
+    "!hdfs dfs -ls wasbs://{azure_user_container_name}@{azure_account_name}.blob.core.windows.net/{username}/stations/\n",
+    "print(f'!hdfs dfs -ls output_path')\n",
+    "!hdfs dfs -ls output_path\n",
+    "print(f'!hdfs dfs -ls remotestationsp')\n",
+    "!hdfs dfs -ls remotestationsp\n"
    ]
   },
   {
