--- a/notebooks/01_ghcn_processing.ipynb
+++ b/notebooks/01_ghcn_processing.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba7d9a1e-2ef1-44b6-9898-3307952e5933",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%run ./00_ghcn_setup.ipynb\n",
+    "# Run this cell to start a spark session in this notebook\n",
+    "\n",
+    "start_spark(executor_instances=2, executor_cores=1, worker_memory=1, master_memory=1)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "56d72776",
    "metadata": {},
