--- a/notebooks/01_ghcn_processing.ipynb
+++ b/notebooks/01_ghcn_processing.ipynb
@@ -6555,7 +6555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "id": "e1bb3019-a061-43f7-a029-66889e1f1f91",
    "metadata": {},
    "outputs": [
@@ -6594,28 +6594,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>AGE00147710</td>\n",
-       "      <td>4</td>\n",
+       "      <td>USC00016329</td>\n",
+       "      <td>9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>AGE00147714</td>\n",
-       "      <td>3</td>\n",
+       "      <td>USC00017126</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>AGM00060360</td>\n",
-       "      <td>4</td>\n",
+       "      <td>USC00017576</td>\n",
+       "      <td>11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>AGM00060445</td>\n",
-       "      <td>5</td>\n",
+       "      <td>USC00018980</td>\n",
+       "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>AGM00060511</td>\n",
-       "      <td>5</td>\n",
+       "      <td>USC00020098</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -6623,57 +6623,16 @@
       ],
       "text/plain": [
        "            ID  NUM_ELEMENTS\n",
-       "0  AGE00147710             4\n",
-       "1  AGE00147714             3\n",
-       "2  AGM00060360             4\n",
-       "3  AGM00060445             5\n",
-       "4  AGM00060511             5"
+       "0  USC00016329             9\n",
+       "1  USC00017126             5\n",
+       "2  USC00017576            11\n",
+       "3  USC00018980             8\n",
+       "4  USC00020098             3"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
     },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Stage 473:============================>                            (1 + 1) / 2]"
-     ]
-    }
-   ],
-   "source": [
-    "# Rename columns and assign the result back\n",
-    "station_element_counts = station_element_counts \\\n",
-    "    .withColumnRenamed(\"CORE\", \"NUM_CORE_ELEMENTS\") \\\n",
-    "    .withColumnRenamed(\"OTHER\", \"NUM_OTHER_ELEMENTS\")\n",
-    "\n",
-    "# Add column for total number of elements\n",
-    "#station_element_counts = station_element_counts.withColumn(\n",
-    "#    \"NUM_ELEMENTS\",\n",
-    "#    F.col(\"NUM_CORE_ELEMENTS\") + F.col(\"NUM_OTHER_ELEMENTS\")\n",
-    "#)\n",
-    "\n",
-    "# Preview the result\n",
-    "show_as_html(station_element_counts.limit(5))\n",
-    "\n",
-    "# Add column for total number of elements\n",
-    "total_element_count = station_element_counts.agg(\n",
-    "    F.sum(\"NUM_ELEMENTS\").alias(\"TOTAL_ELEMENTS\")\n",
-    ")\n",
-    "\n",
-    "# Preview the result\n",
-    "show_as_html(total_element_count)\n",
-    "\n",
-    "# Preview the result\n",
-    "show_as_html(station_element_counts.limit(5))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "id": "0112ae64-7373-4aab-9ce2-12577c196a16",
-   "metadata": {},
-   "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
@@ -6721,7 +6680,40 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
+    }
+   ],
+   "source": [
+    "# Rename columns and assign the result back\n",
+    "station_element_counts = station_element_counts \\\n",
+    "    .withColumnRenamed(\"CORE\", \"NUM_CORE_ELEMENTS\") \\\n",
+    "    .withColumnRenamed(\"OTHER\", \"NUM_OTHER_ELEMENTS\")\n",
+    "\n",
+    "# Add column for total number of elements\n",
+    "#station_element_counts = station_element_counts.withColumn(\n",
+    "#    \"NUM_ELEMENTS\",\n",
+    "#    F.col(\"NUM_CORE_ELEMENTS\") + F.col(\"NUM_OTHER_ELEMENTS\")\n",
+    "#)\n",
+    "\n",
+    "# Preview the result\n",
+    "show_as_html(station_element_counts.limit(5))\n",
+    "\n",
+    "# Add column for total number of elements\n",
+    "total_element_count = station_element_counts.agg(\n",
+    "    F.sum(\"NUM_ELEMENTS\").alias(\"TOTAL_ELEMENTS\")\n",
+    ")\n",
+    "\n",
+    "# Preview the result\n",
+    "show_as_html(total_element_count)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "7440e110-9daf-4e3c-bb64-02e9d2e005c0",
+   "metadata": {},
+   "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
@@ -6751,46 +6743,70 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>ID</th>\n",
+       "      <th>COUNTRY_CODE</th>\n",
+       "      <th>COUNTRY_NAME</th>\n",
+       "      <th>STATE</th>\n",
+       "      <th>STATE_NAME</th>\n",
        "      <th>NUM_ELEMENTS</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>USC00016329</td>\n",
-       "      <td>9</td>\n",
+       "      <td>US1SCBF0015</td>\n",
+       "      <td>US</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>SC</td>\n",
+       "      <td>SOUTH CAROLINA</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>USC00016847</td>\n",
-       "      <td>13</td>\n",
+       "      <td>US1SCBF0016</td>\n",
+       "      <td>US</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>SC</td>\n",
+       "      <td>SOUTH CAROLINA</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>USC00017576</td>\n",
-       "      <td>11</td>\n",
+       "      <td>US1SCBF0007</td>\n",
+       "      <td>US</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>SC</td>\n",
+       "      <td>SOUTH CAROLINA</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>USC00017671</td>\n",
+       "      <td>US1SCBF0022</td>\n",
+       "      <td>US</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>SC</td>\n",
+       "      <td>SOUTH CAROLINA</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>USC00017999</td>\n",
-       "      <td>16</td>\n",
+       "      <td>US1SCBF0010</td>\n",
+       "      <td>US</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>SC</td>\n",
+       "      <td>SOUTH CAROLINA</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            ID  NUM_ELEMENTS\n",
-       "0  USC00016329             9\n",
-       "1  USC00016847            13\n",
-       "2  USC00017576            11\n",
-       "3  USC00017671             5\n",
-       "4  USC00017999            16"
+       "            ID COUNTRY_CODE   COUNTRY_NAME STATE      STATE_NAME  NUM_ELEMENTS\n",
+       "0  US1SCBF0015           US  United States    SC  SOUTH CAROLINA             4\n",
+       "1  US1SCBF0016           US  United States    SC  SOUTH CAROLINA             4\n",
+       "2  US1SCBF0007           US  United States    SC  SOUTH CAROLINA             4\n",
+       "3  US1SCBF0022           US  United States    SC  SOUTH CAROLINA             5\n",
+       "4  US1SCBF0010           US  United States    SC  SOUTH CAROLINA             6"
       ]
      },
      "metadata": {},
@@ -6798,27 +6814,93 @@
     }
    ],
    "source": [
-    "# Rename columns and assign the result back\n",
-    "station_element_counts = station_element_counts \\\n",
-    "    .withColumnRenamed(\"CORE\", \"NUM_CORE_ELEMENTS\") \\\n",
-    "    .withColumnRenamed(\"OTHER\", \"NUM_OTHER_ELEMENTS\")\n",
-    "\n",
-    "# Add column for total number of elements\n",
-    "total_element_count = station_element_counts.agg(\n",
-    "    F.sum(\"NUM_ELEMENTS\").alias(\"TOTAL_ELEMENTS\")\n",
+    "stations_enriched = stations_select.join(\n",
+    "    station_element_counts,\n",
+    "    on=\"ID\",\n",
+    "    how=\"left\"\n",
     ")\n",
     "\n",
-    "# Preview the result\n",
-    "show_as_html(total_element_count)\n",
+    "show_as_html(stations_enriched.limit(5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "7801a4f2-e119-47bb-9658-1e900f880530",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [ID]\n",
+       "Index: []"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total stations in daily not found in stations_enriched: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# --- Q4(a): Check for missing stations in daily ---\n",
     "\n",
-    "# Preview the result\n",
-    "show_as_html(station_element_counts.limit(5))\n"
+    "# Perform LEFT JOIN between daily and stations_enriched (from Q3e)\n",
+    "daily_missing_joined = dailydf.join(\n",
+    "    stations_enriched,  # from Q3(e)\n",
+    "    on=\"ID\",\n",
+    "    how=\"left\"\n",
+    ")\n",
+    "\n",
+    "# Filter for rows where station information is missing after join\n",
+    "missing_stations = daily_missing_joined.filter(col(\"COUNTRY_CODE\").isNull())\n",
+    "\n",
+    "# Display distinct station IDs missing from stations\n",
+    "missing_station_ids = missing_stations.select(\"ID\").distinct().orderBy(\"ID\")\n",
+    "show_as_html(missing_station_ids.limit(20))\n",
+    "\n",
+    "# Count how many station IDs are missing\n",
+    "print(\"Total stations in daily not found in stations_enriched:\",\n",
+    "      missing_station_ids.count())\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7440e110-9daf-4e3c-bb64-02e9d2e005c0",
+   "id": "34985fc1-661a-4e8f-9c8e-be2edb5a9bcf",
    "metadata": {},
    "outputs": [],
    "source": []
