tidy up add xlsx

--- a/notebooks/02_analysis_examples_clean.ipynb
+++ b/notebooks/02_analysis_examples_clean.ipynb
@@ -3,12 +3,44 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c45fa4a5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "caa781f8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "b12dfbd7",
    "metadata": {},
    "outputs": [],
    "source": [
     "%run ./00_notebook_with_setup.ipynb"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5736e970",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5071585e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -29,7 +61,11 @@
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "language_info": {
+   "name": "python"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
