once again reorganising 01 and 02

--- a/notebooks/00_ghcn_setup.ipynb
+++ b/notebooks/00_ghcn_setup.ipynb
@@ -229,6 +229,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "46817cd2-d6d0-49b4-a97a-21881d5bb3e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DEEBUG = True\n",
+    "def dprintf(flag: bool, msg: str):\n",
+    "    if flag:\n",
+    "        print(msg)\n",
+    "\n",
+    "def dhtmlf(flag: bool,df, n=20):\n",
+    "    \"\"\"Leverage existing pandas jupyter integration to show a spark dataframe as html.\n",
+    "    \n",
+    "    Args:\n",
+    "        n (int): number of rows to show (default: 20)\n",
+    "    \"\"\"\n",
+    "    if flag: \n",
+    "        display(df.limit(n).toPandas())        "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "f06343f5-a638-4f7f-ade5-5f564a068bc0",
    "metadata": {},
@@ -262,7 +284,7 @@
    "source": [
     "# Run this cell to start a spark session in this notebook\n",
     "\n",
-    "start_spark(executor_instances=2, executor_cores=1, worker_memory=1, master_memory=1)"
+    "#start_spark(executor_instances=2, executor_cores=1, worker_memory=1, master_memory=1)"
    ]
   }
  ],
