changed dhtmlp to hprintf

--- a/notebooks/00_ghcn_setup.ipynb
+++ b/notebooks/00_ghcn_setup.ipynb
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "46817cd2-d6d0-49b4-a97a-21881d5bb3e1",
    "metadata": {},
    "outputs": [],
@@ -239,7 +239,7 @@
     "    if flag:\n",
     "        print(msg)\n",
     "\n",
-    "def dhtmlf(flag: bool,df, n=20):\n",
+    "def hprintflf(flag: bool,df, n=20):\n",
     "    \"\"\"Leverage existing pandas jupyter integration to show a spark dataframe as html.\n",
     "    \n",
     "    Args:\n",
