--- a/notebooks/01_ghcn_processing.ipynb
+++ b/notebooks/01_ghcn_processing.ipynb
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "34036a7d",
    "metadata": {},
    "outputs": [
@@ -735,7 +735,7 @@
     "  \n",
     "dprintf(DEEBUG,\"What data types?\")\n",
     "dailydf.printSchema()\n",
-    "dhtmlf(DEEBUG,dailydf.limit(5))\n",
+    "hprintf(DEEBUG,dailydf.limit(5))\n",
     "nNotNull = dailydf.select(\n",
     "    F.count(col(\"MFLAG\").isNotNull().cast(\"int\")).alias(\"MFLAG_count\"),\n",
     "    F.count(col(\"QFLAG\").isNotNull().cast(\"int\")).alias(\"QFLAG_count\"),\n",
@@ -748,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "id": "14bccdbb-dd4b-4ff1-be64-22e9362ec7b8",
    "metadata": {},
    "outputs": [
@@ -862,7 +862,7 @@
     "    trim(substring(\"value\", 1, 2)).alias(\"CODE\"),\n",
     "    trim(substring(\"value\", 4, 50)).alias(\"COUNTRY_NAME\")\n",
     ")\n",
-    "dhtmlf(DEEBUG,countriesdf.limit(5))\n",
+    "hprintf(DEEBUG,countriesdf.limit(5))\n",
     "\n",
     "dprintf(DEEBUG,\"Write parsed countriesdf to blob storage as parquet\")\n",
     "#countriesdf.write.mode(\"overwrite\").parquet(pqtCountries)\n"
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "id": "cab2d40d-9cd8-4b56-bf36-6a93795d1abd",
    "metadata": {},
    "outputs": [
@@ -1045,7 +1045,7 @@
     "    trim(substring(\"value\", 75, 3)).alias(\"HCNFLAG\"),\n",
     "    trim(substring(\"value\", 80, 5)).alias(\"WMOID\")\n",
     ")\n",
-    "dhtmlf(DEEBUG, stationsdf.limit(5))\n",
+    "hprintf(DEEBUG, stationsdf.limit(5))\n",
     "\n",
     "dprintf(DEEBUG, \"Q2(B) Write parsed stationsdf to blob storage as Parquet\")\n",
     "#stationsdf.write.mode(\"overwrite\").parquet(pqtStations)\n"
@@ -1053,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "id": "732b2597-8f9a-4f68-934e-e0a0f87180fc",
    "metadata": {},
    "outputs": [
@@ -1198,7 +1198,7 @@
     "    trim(substring(\"value\", 37, 4)).cast(\"int\").alias(\"FIRSTYEAR\"),\n",
     "    trim(substring(\"value\", 42, 4)).cast(\"int\").alias(\"LASTYEAR\")\n",
     ")\n",
-    "dhtmlf(DEEBUG,inventorydf.limit(5))\n",
+    "hprintf(DEEBUG,inventorydf.limit(5))\n",
     "\n",
     "dprintf(DEEBUG,\"Write parsed inventorydf to blob storage as parquet\")\n",
     "#inventorydf.write.mode(\"overwrite\").parquet(pqtInventory)"
@@ -1206,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "id": "678c016e-97a9-4b1d-aea4-bd7c939a3114",
    "metadata": {},
    "outputs": [
@@ -1324,7 +1324,7 @@
     "    trim(substring(\"value\", 1, 2)).alias(\"CODE\"),\n",
     "    trim(substring(\"value\", 4, 50)).alias(\"STATE_NAME\")\n",
     ")\n",
-    "dhtmlf(DEEBUG,statesdf.limit(5))\n",
+    "hprintf(DEEBUG,statesdf.limit(5))\n",
     "\n",
     "dprintf(DEEBUG,\"Write parsed statesdf to blob storage as parquet\")\n",
     "#statesdf.write.mode(\"overwrite\").parquet(pqtStates)"
@@ -1332,7 +1332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "id": "8c9ef26f-1d94-4d1b-bf4c-27bcf692efbc",
    "metadata": {},
    "outputs": [
@@ -1797,12 +1797,12 @@
     "dprintf(DEEBUG,\"Q3(B) STATIONS AND COUNTRIES rawStation\")\n",
     "\n",
     "dprintf(DEEBUG,\"Q3(B) stationsdf - WITH COUNTRY_CODE\")\n",
-    "dhtmlf(DEEBUG,stationsdf.limit(5))\n",
+    "hprintf(DEEBUG,stationsdf.limit(5))\n",
     "stationsCodedf = stationsdf.withColumn(\"COUNTRY_CODE\", substring(\"ID\", 1, 2))\n",
-    "dhtmlf(DEEBUG,stationsCodedf.limit(5))\n",
+    "hprintf(DEEBUG,stationsCodedf.limit(5))\n",
     "\n",
     "dprintf(DEEBUG,\"Q3(B) countriesdf\")\n",
-    "dhtmlf(DEEBUG,countriesdf.limit(5))\n",
+    "hprintf(DEEBUG,countriesdf.limit(5))\n",
     "\n",
     "\n",
     "dprintf(DEEBUG,\"Q3(B) stationsdf - JOIN BY COUNTRY_CODE\")\n",
@@ -1811,12 +1811,12 @@
     "    stationsCodedf[\"COUNTRY_CODE\"] == countriesdf[\"CODE\"],\n",
     "    how=\"left\"\n",
     ").drop(countriesdf[\"CODE\"])\n",
-    "dhtmlf(DEEBUG,stationsCodedf.limit(5))"
+    "hprintf(DEEBUG,stationsCodedf.limit(5))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "id": "37b604ad-134f-49a2-a7f0-aefb90d772e8",
    "metadata": {},
    "outputs": [
@@ -2364,11 +2364,11 @@
     "\n",
     "# Clean station states\n",
     "dprintf(DEEBUG,\"countriesdf\")\n",
-    "dhtmlf(DEEBUG,countriesdf.limit(5))\n",
+    "hprintf(DEEBUG,countriesdf.limit(5))\n",
     "\n",
     "\n",
     "dprintf(DEEBUG,\"stationsdf\")\n",
-    "dhtmlf(DEEBUG, stationsdf.limit(5))\n",
+    "hprintf(DEEBUG, stationsdf.limit(5))\n",
     "stationStateClean = stationsdf \\\n",
     "    .filter(trim(col(\"STATE\")) != \"\") \\\n",
     "    .withColumn(\"STATE_CLEAN\", upper(trim(col(\"STATE\"))))\n",
@@ -2376,11 +2376,11 @@
     "\n",
     "\n",
     "dprintf(DEEBUG,\"stationStateClean\")\n",
-    "dhtmlf(DEEBUG, stationStateClean.limit(5))\n",
+    "hprintf(DEEBUG, stationStateClean.limit(5))\n",
     "\n",
     "\n",
     "dprintf(DEEBUG,\"Q3(C) statesdf\")\n",
-    "dhtmlf(DEEBUG,statesdf.limit(5))\n",
+    "hprintf(DEEBUG,statesdf.limit(5))\n",
     "\n",
     "\n",
     "\n",
@@ -2393,12 +2393,12 @@
     "    how=\"left\"\n",
     ").drop(\"STATE_CLEAN\")\n",
     "\n",
-    "dhtmlf(DEEBUG, stationStatedf.limit(5))\n"
+    "hprintf(DEEBUG, stationStatedf.limit(5))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "id": "52dca0a7-e8ac-485b-8bc6-3d05c1c986f6",
    "metadata": {},
    "outputs": [
@@ -2616,16 +2616,16 @@
     "inventorydf\n",
     "\n",
     "dprintf(DEEBUG,\"inventorydf\")\n",
-    "dhtmlf(DEEBUG, inventorydf.limit(5))\n",
+    "hprintf(DEEBUG, inventorydf.limit(5))\n",
     "inventorySingle = inventorydf.dropDuplicates([\"ID\"])\n",
     "\n",
     "dprintf(DEEBUG,\"inventorySingle\")\n",
-    "dhtmlf(DEEBUG, inventorySingle.limit(5))"
+    "hprintf(DEEBUG, inventorySingle.limit(5))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "id": "b5bd0c70-7831-4f80-8560-ed00d71564f4",
    "metadata": {},
    "outputs": [
@@ -2847,14 +2847,14 @@
     "\n",
     "\n",
     "dprintf(DEEBUG,\"inventorydf\")\n",
-    "dhtmlf(DEEBUG, inventorydf.limit(5))\n",
+    "hprintf(DEEBUG, inventorydf.limit(5))\n",
     "\n",
     "# Group by ID and count distinct ELEMENTs\n",
     "nStationElementdf = inventorydf.groupBy(\"ID\") \\\n",
     "    .agg(F.countDistinct(\"ELEMENT\").alias(\"NUM_ELEMENTS\"))\n",
     "\n",
     "dprintf(DEEBUG,\"nStationElementdf\")\n",
-    "dhtmlf(DEEBUG, nStationElementdf.limit(5))"
+    "hprintf(DEEBUG, nStationElementdf.limit(5))"
    ]
   },
   {
@@ -2878,7 +2878,7 @@
     "\n",
     "\n",
     "dprintf(DEEBUG,\"classifiedInventory\")\n",
-    "dhtmlf(DEEBUG, classifiedInventory.limit(5))\n",
+    "hprintf(DEEBUG, classifiedInventory.limit(5))\n",
     "\n",
     "nStationElements = classifiedInventory.groupBy(\n",
     "    \"ID\",                   # Group by station IDb\n",
@@ -2891,7 +2891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "id": "6a43701e-6b96-46c6-999e-933481d0229e",
    "metadata": {
     "scrolled": true
@@ -3106,7 +3106,7 @@
     "\n",
     "from pyspark.sql.functions import col\n",
     "dprintf(DEEBUG,\"classifiedInventory\")\n",
-    "dhtmlf(DEEBUG, classifiedInventory.limit(5))\n",
+    "hprintf(DEEBUG, classifiedInventory.limit(5))\n",
     "\n",
     "nStationElementdf = classifiedInventory.withColumn(\"COUNT\", lit(1))\n",
     "nStationElementdf = nStationElementdf.groupBy(\n",
@@ -3119,7 +3119,7 @@
     ")\n",
     "nStationElementdf = nStationElementdf.fillna(0)\n",
     "dprintf(DEEBUG,\"nStationElementdf\")\n",
-    "dhtmlf(DEEBUG, nStationElementdf.limit(5))"
+    "hprintf(DEEBUG, nStationElementdf.limit(5))"
    ]
   },
   {
@@ -3251,7 +3251,7 @@
     "\n",
     "\n",
     "dprintf(DEEBUG,f\"{dailydf}\")\n",
-    "dhtmlf(DEEBUG, dailydf.limit(5))\n",
+    "hprintf(DEEBUG, dailydf.limit(5))\n",
     "nRows = dailydf.count()\n",
     "dprintf(DEEBUG,f\"count dailydf: {dailydf.count()}\")\n",
     "smallDailydf = dailydf.limit(1000)\n",
@@ -3261,10 +3261,10 @@
     "dprintf(DEEBUG, \"Q4(A) LEFT JOIN dailydf with stationEnriched\")\n",
     "\n",
     "dprintf(DEEBUG,f\"smallDailydf\")\n",
-    "dhtmlf(DEEBUG, smallDailydf.limit(5))\n",
+    "hprintf(DEEBUG, smallDailydf.limit(5))\n",
     "\n",
     "dprintf(DEEBUG,f\"stationEnriched\")\n",
-    "dhtmlf(DEEBUG, stationEnriched.limit(5))\n",
+    "hprintf(DEEBUG, stationEnriched.limit(5))\n",
     "# Perform LEFT JOIN on station ID\n",
     "dailyStation = smallDailydf.join(\n",
     "    stationEnriched,\n",
@@ -3273,12 +3273,12 @@
     ")\n",
     "\n",
     "dprintf(DEEBUG,f\"dailyStation\")\n",
-    "dhtmlf(DEEBUG, dailyStation.limit(5))\n"
+    "hprintf(DEEBUG, dailyStation.limit(5))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": null,
    "id": "1d941f7f-2c6d-4d4a-a177-252ff23170f8",
    "metadata": {},
    "outputs": [
@@ -3474,7 +3474,7 @@
     "    how=\"left\"       # Retain all station metadata, even if no element info exists\n",
     ")\n",
     "\n",
-    "dhtmlf(DEEBUG, stationEnriched.limit(5))\n",
+    "hprintf(DEEBUG, stationEnriched.limit(5))\n",
     "s = f'Write join of stationStatedf and stationEnriched (count = {stationEnriched.count()}) as parquet:{pqtstationEnriched}'\n",
     "dprintf(DEEBUG,s)\n",
     "if not 0:\n",
@@ -3584,9 +3584,9 @@
     "rawInventorydf = spark.read.text(inventoryPath)\n",
     "\n",
     "dprintf(DEEBUG,\"rawStationsdf\")\n",
-    "dhtmlf(DEEBUG,rawStationsdf.limit(5))\n",
+    "hprintf(DEEBUG,rawStationsdf.limit(5))\n",
     "dprintf(DEEBUG,\"rawInventorydf\")\n",
-    "dhtmlf(DEEBUG,rawInventorydf.limit(5))\n",
+    "hprintf(DEEBUG,rawInventorydf.limit(5))\n",
     "\n",
     "\n",
     "# Parse inventory file: ID, LAT, LON, ELEMENT, FIRSTYEAR, LASTYEAR\n",
@@ -3599,37 +3599,37 @@
     "    trim(substring(\"value\", 42, 4)).cast(\"int\").alias(\"LASTYEAR\")\n",
     ")\n",
     "dprintf(DEEBUG,\"inventorydf\")\n",
-    "dhtmlf(DEEBUG,inventorydf.limit(5))\n",
+    "hprintf(DEEBUG,inventorydf.limit(5))\n",
     "\n",
     "dprintf(DEEBUG,\"inventorydf:-LATITUDE\")\n",
-    "dhtmlf(DEEBUG,inventorydf.filter(col(\"LATITUDE\") < 0).limit(5))\n",
+    "hprintf(DEEBUG,inventorydf.filter(col(\"LATITUDE\") < 0).limit(5))\n",
     "\n",
     "dprintf(DEEBUG,\"inventorydf:-LONGITUDE\")\n",
-    "dhtmlf(DEEBUG,inventorydf.filter(col(\"LONGITUDE\") < 0).limit(5))\n",
+    "hprintf(DEEBUG,inventorydf.filter(col(\"LONGITUDE\") < 0).limit(5))\n",
     "\n",
     "# Diagnose ELEMENT parsing\n",
     "element_check = inventorydf.select(trim(col(\"ELEMENT\")).alias(\"ELEMENT\")).distinct()\n",
     "dprintf(DEEBUG,\"element_check:ELEMENT\")\n",
-    "dhtmlf(DEEBUG,element_check.orderBy(\"ELEMENT\"))\n",
+    "hprintf(DEEBUG,element_check.orderBy(\"ELEMENT\"))\n",
     "\n",
     "# Count distinct elements per station\n",
     "station_element_counts = inventorydf.groupBy(\"ID\").agg(\n",
     "    F.countDistinct(\"ELEMENT\").alias(\"NUM_ELEMENTS\")\n",
     ")\n",
     "dprintf(DEEBUG,\"station_element_counts:ID\")\n",
-    "dhtmlf(DEEBUG,station_element_counts.orderBy(\"ID\").limit(10))\n",
+    "hprintf(DEEBUG,station_element_counts.orderBy(\"ID\").limit(10))\n",
     "\n",
     "dprintf(DEEBUG,\"Total number of elements across all stations\")\n",
     "total_element_count = station_element_counts.agg(\n",
     "    F.sum(\"NUM_ELEMENTS\").alias(\"TOTAL_ELEMENTS\")\n",
     ")\n",
     "dprintf(DEEBUG,\"total_element_count\")\n",
-    "dhtmlf(DEEBUG,total_element_count)"
+    "hprintf(DEEBUG,total_element_count)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "e1bb3019-a061-43f7-a029-66889e1f1f91",
    "metadata": {},
    "outputs": [
@@ -3853,7 +3853,7 @@
     "    .withColumnRenamed(\"CORE\", \"NUM_CORE_ELEMENTS\") \\\n",
     "    .withColumnRenamed(\"OTHER\", \"NUM_OTHER_ELEMENTS\")\n",
     "\n",
-    "dhtmlf(DEEBUG,station_element_counts.limit(5))\n",
+    "hprintf(DEEBUG,station_element_counts.limit(5))\n",
     "dprintf(DEEBUG,\"total_element_count\")\n",
     "\n",
     "# Add column for total number of elements\n",
@@ -3863,7 +3863,7 @@
     "#)\n",
     "\n",
     "# Preview the result\n",
-    "dhtmlf(DEEBUG,station_element_counts.limit(5))\n",
+    "hprintf(DEEBUG,station_element_counts.limit(5))\n",
     "\n",
     "# Add column for total number of elements\n",
     "total_element_count = station_element_counts.agg(\n",
@@ -3871,7 +3871,7 @@
     ")\n",
     "\n",
     "# Preview the result\n",
-    "dhtmlf(DEEBUG,total_element_count)\n",
+    "hprintf(DEEBUG,total_element_count)\n",
     "\n",
     "\n"
    ]
@@ -3897,24 +3897,24 @@
     "#rawStationsdf = spark.read.text(stationsPath)\n",
     "#rawInventorydf = spark.read.text(inventoryPath)\n",
     "\n",
-    "dhtmlf(DEEBUG,statesdf.limit(5))\n",
-    "dhtmlf(DEEBUG,countriesdf.limit(5))\n",
-    "dhtmlf(DEEBUG,rawStationsdf.limit(5))\n",
-    "dhtmlf(DEEBUG,rawInventorydf.limit(5))\n",
+    "hprintf(DEEBUG,statesdf.limit(5))\n",
+    "hprintf(DEEBUG,countriesdf.limit(5))\n",
+    "hprintf(DEEBUG,rawStationsdf.limit(5))\n",
+    "hprintf(DEEBUG,rawInventorydf.limit(5))\n",
     "\n",
     "# Parse states\n",
     "statesdf = statesdf.select(\n",
     "    trim(substring(\"value\", 1, 2)).alias(\"CODE\"),\n",
     "    trim(substring(\"value\", 4, 50)).alias(\"STATE_NAME\")\n",
     ")\n",
-    "dhtmlf(DEEBUG,statesdf.limit(5))\n",
+    "hprintf(DEEBUG,statesdf.limit(5))\n",
     "\n",
     "# Parse countries\n",
     "#countriesdf = countriesdf.select(DEE\n",
     "#    trim(substring(\"value\", 1, 2)).alias(\"CODE\"),\n",
     "#    trim(substring(\"value\", 4, 50)).alias(\"COUNTRY_NAME\")\n",
     "#)\n",
-    "#dhtmlf(DEEBUG,countriesdf.limit(5))\n",
+    "#hprintf(DEEBUG,countriesdf.limit(5))\n",
     "\n",
     "a\n",
     "\n",
@@ -3922,32 +3922,32 @@
     "us_stations = station_country_joined.filter(col(\"COUNTRY_CODE\") == \"US\")\n",
     "non_us_stations = station_country_joined.filter(col(\"COUNTRY_CODE\") != \"US\") \\\n",
     "    .withColumn(\"STATE_NAME\", lit(None).cast(\"string\"))\n",
-    "dhtmlf(DEEBUG,us_stations.limit(5))\n",
+    "hprintf(DEEBUG,us_stations.limit(5))\n",
     "\n",
     "# Join US stations with states\n",
     "us_stations_clean = us_stations.withColumn(\"STATE_CLEAN\", upper(trim(col(\"STATE\"))))\n",
-    "dhtmlf(DEEBUG,us_stations_clean.limit(5))\n",
+    "hprintf(DEEBUG,us_stations_clean.limit(5))\n",
     "\n",
     "us_stations_joined = us_stations_clean.join(\n",
     "    statesdf,\n",
     "    trim(us_stations_clean[\"STATE_CLEAN\"]) == trim(statesdf[\"CODE\"]),\n",
     "    how=\"left\"\n",
     ").drop(\"STATE_CLEAN\", statesdf[\"CODE\"])\n",
-    "dhtmlf(DEEBUG,us_stations_joined.limit(5))\n",
+    "hprintf(DEEBUG,us_stations_joined.limit(5))\n",
     "\n",
     "# Merge\n",
     "stations_full = us_stations_joined.unionByName(non_us_stations)\n",
-    "dhtmlf(DEEBUG,stations_full.limit(5))\n",
+    "hprintf(DEEBUG,stations_full.limit(5))\n",
     "\n",
     "# Final preview\n",
     "stations_select = stations_full.select(\"ID\", \"COUNTRY_CODE\", \"COUNTRY_NAME\", \"STATE\", \"STATE_NAME\")\n",
     "stations_select.orderBy(\"COUNTRY_CODE\", \"STATE\", \"ID\").show(10, truncate=False)\n",
-    "dhtmlf(DEEBUG,stations_select.limit(5))"
+    "hprintf(DEEBUG,stations_select.limit(5))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "7801a4f2-e119-47bb-9658-1e900f880530",
    "metadata": {},
    "outputs": [
@@ -3978,7 +3978,7 @@
     "\n",
     "# Display distinct station IDs missing from stations\n",
     "missing_station_ids = missing_stations.select(\"ID\").distinct().orderBy(\"ID\")\n",
-    "dhtmlf(DEEBUG,missing_station_ids.limit(20))\n",
+    "hprintf(DEEBUG,missing_station_ids.limit(20))\n",
     "\n",
     "# Count how many station IDs are missing\n",
     "dprintf(DEEBUG,\"Total stations in daily not found in stations_enriched:\",\n",
@@ -3992,7 +3992,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
+   "id": "799582fb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e1b2618",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "7440e110-9daf-4e3c-bb64-02e9d2e005c0",
    "metadata": {},
    "outputs": [
@@ -4015,7 +4031,7 @@
     "    how=\"left\"\n",
     ")\n",
     "\n",
-    "dhtmlf(DEEBUG,stations_enriched.limit(5))"
+    "hprintf(DEEBUG,stations_enriched.limit(5))"
    ]
   },
   {
