local changes m: before merge

--- a/notebooks/02_ghcn_analysis.ipynb
+++ b/notebooks/02_ghcn_analysis.ipynb
@@ -146,28 +146,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "id": "51d6483f-a00f-4e25-83b4-4cd4af8ab743",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "wasbs://campus-data@madsstorage002.blob.core.windows.net/ghcnd/\n",
-      "wasbs://campus-data@madsstorage002.blob.core.windows.net/dew59/\n",
-      "wasbs://campus-data@madsstorage002.blob.core.windows.net/ghcnd//daily/\n"
+     "ename": "NameError",
+     "evalue": "name 'azure_data_container_name' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m aDaily         \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/2025.csv.gz\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m----> 2\u001b[0m prefix         \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mwasbs://\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mazure_data_container_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m@\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mazure_account_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.blob.core.windows.net/ghcnd/\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m      3\u001b[0m prefixWrite    \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mwasbs://\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mazure_data_container_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m@\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mazure_account_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.blob.core.windows.net/dew59/\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m      4\u001b[0m prefixDaily    \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mprefix\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/daily/\u001b[39m\u001b[38;5;124m'\u001b[39m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'azure_data_container_name' is not defined"
      ]
     }
    ],
    "source": [
     "aDaily         = f'/2025.csv.gz'\n",
     "prefix         = f'wasbs://{azure_data_container_name}@{azure_account_name}.blob.core.windows.net/ghcnd/'\n",
-    "prefixWrite    = f'wasbs://{azure_data_container_name}@{azure_account_name}.blob.core.windows.net/dew59/'\n",
+    "prefixWrite    = f'wasbs://campus-user@madsstorage002.blob.core.windows.net/dew59/'\n",
+    "#prefixWrite    = \"./\"\n",
     "prefixDaily    = f'{prefix}/daily/'\n",
-    "print(prefix)\n",
-    "print(prefixWrite)\n",
-    "print(prefixDaily) "
+    "dprintf(DEEBUG,prefix)\n",
+    "dprintf(DEEBUG,prefixWrite)\n",
+    "dprintf(DEEBUG,prefixDaily)\n",
+    "dprintf(DEEBUG,\"DEEBUG = TRUE\")"
    ]
   },
   {
